// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button ui link match snapshot 1`] = `
<button
  class="medium auto link"
  type="button"
>
  Link
</button>
`;

exports[`Button ui match snapshot 1`] = `
<button
  class="medium auto button primary"
  type="button"
>
  Button
</button>
`;
